Fix weird column alignment on scoll
Fix function argument type in users
Unwrap user-row

--- a/src/pages/app/navbar/tabs/users/Header.module.scss
+++ b/src/pages/app/navbar/tabs/users/Header.module.scss
@@ -1,4 +1,5 @@
 .header {
+    overflow-y: scroll;
     padding: 0 0.5em;
     height: 2em;
     display: grid;
