--- a/src/pages/app/navbar/tabs/users/UserList.module.scss
+++ b/src/pages/app/navbar/tabs/users/UserList.module.scss
@@ -3,6 +3,7 @@
     @include size(100%);
     position: relative;
     overflow: auto;
+    overflow-y: scroll;
     transition: all 0.3s;
     will-change: transform;
     flex-grow: 1;
